# jaxfi-JAXFriendlyInterface

./: .gitignore  LICENSE  README.md  experiment_xla_optimization_levels.py  pyproject.toml  setup.py  test.ipynb  test.sh
jaxfi/: __init__.py  api.py  dynamic_lib_loading.py  enumerated_jnp_members.py  globals.py  types.py  utils.py
jaxfi/experimental/: __init__.py  auto_pmap.py  device_cond.py  jit.py
jfi/: __init__.py  api.py  utils.py
jfi/experimental/: __init__.py  jit.py  torch.py
tests/: dtypes_and_device.py  random_generators.py  test_default_device_under_jit.py  test_device_select.py  test_dtypes_and_device.py  test_external_library_works.py  test_proper_device_and_sharding_placement.py  test_random_generators.py
